--- a/game.conf
+++ b/game.conf
@@ -1,5 +1,5 @@
-name = Moontest
-description = Moon Habitat Simulator
+name = A Day in the Extraterrestrial Life
+description = Life on a distant world - Derived from Moontest by Droog71
 allowed_mapgens = singlenode
-author = Droog71
+author = blowgundude
 min_minetest_version = 5.4.1
